Revision history for {{$dist->name}}

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]

 [DOCUMENTATION]

 [ENHANCEMENTS]

 [NEW FEATURES]

 [STATISTICS]

0.18.2 2013-09-25
 [BUG FIXES]
 - Push both branches master and releases upon release.

 [STATISTICS]
 - code churn: 4 files changed, 25 insertions(+), 6 deletions(-)

0.18.1 2013-09-22
 [MISC]
 - Bump the dependency of Dist::Zilla::Plugin::Test::Compile to 2.033.

 [STATISTICS]
 - code churn: 4 files changed, 18 insertions(+), 4 deletions(-)

0.18.0 2013-05-02
 [BUG FIXES]
 - Push version dependencies out of the main module to allow  for
   bootstrapping.

 [ENHANCEMENTS]
 - Bump D::Z::P::ChangeStats::Git to v0.2.1.

 [STATISTICS]
 - code churn: 3 files changed, 16 insertions(+), 6 deletions(-)

0.17.0 2013-05-02
 [ENHANCEMENTS]
 - Move some plugins around to commit all changes to master after a
   release.
 - Up NextVersion::Semantic dependency to v0.1.2
 - Up ChangeStats::Git dependency

 [STATISTICS]
 - code churn: 2 files changed, 32 insertions(+), 19 deletions(-)

0.16.0 2013-03-18
 [ENHANCEMENTS]
 - Add DZP::ContributorsFromGit and DZP::ContributorsFile

0.15.0 2013-02-02
 [ENHANCEMENTS]
 - Use DZ::P::Twitter version 0.019 (now with twitter cards!)

 [STATISTICS]
 - code churn: 2 files changed, 14 insertions(+), 3 deletions(-)

0.14.0 2012-12-12
 [ENHANCEMENTS]
 - use ReportVersions::Tiny

0.13.0 2012-11-11
 [ENHANCEMENTS]
 - add CoderwallEndorse

 [STATISTICS]
 - code churn: 3 files changed, 17 insertions(+)

0.12.0 2012-06-28
 [ENHANCEMENTS]
 - add HelpWanted

 [STATISTICS]
 - code churn: 3 files changed, 30 insertions(+), 2 deletions(-)

0.11.1 2012-05-28
 [BUG FIXES]
 - add explicit depencencies

0.11.0 2012-05-22
 [ENHANCEMENTS]
 - add ChangeStats::Git

0.10.0 2012-03-21
 [ENHANCEMENTS]
 - brand new Mint!

0.9.0 2012-03-19
 [ENHANCEMENTS]
 - add Covenant
 - add SchwartzRatio

0.8.0 2012-03-19
 [ENHANCEMENTS]
 - add NextVersion::Semantic

0.7.0 2012-03-03
 [ENHANCEMENTS]
 - add plugin Test::Compile
