@@ -4,6 +4,7 @@ Revision history for {{$dist->name}}
  [API CHANGES]
 
  [BUG FIXES]
+ - Add 'multiple_inheritance' flag for dz::p::git::commitbuild.
 
  [DOCUMENTATION]
 
